--- a/roles/ruby/tasks/main.yml
+++ b/roles/ruby/tasks/main.yml
@@ -1,6 +1,8 @@
 - include: ruby.yml tags=ruby
 
 - name: Check for phantomjs
+  tags:
+    - phantomjs
   stat: path=/usr/local/bin/phantomjs
   register: phantom_installed
 
