Tune the rubies

--- a/roles/ruby/tasks/ruby.yml
+++ b/roles/ruby/tasks/ruby.yml
@@ -7,12 +7,7 @@
 - include: ruby-install.yml rubies={{ rubies }}
   vars:
     rubies:
-      - {flavor: "ruby", version: "2.0"}
-      - {flavor: "ruby", version: "2.1"}
+#      - {flavor: "ruby", version: "2.0"}
+#      - {flavor: "ruby", version: "2.1"}
       - {flavor: "ruby", version: "2.2"}
-      - {flavor: "ruby", version: "1.9"}
-- name: Check for phantomjs
-  stat: path=/usr/local/bin/phantomjs
-  register: phantom_installed
-- include: phantomjs.yml phantomjs_url="https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-1.9.7-macosx.zip"
-  when: phantom_installed.stat.exists == false
+#      - {flavor: "ruby", version: "1.9"}
