--- a/roles/mail/tasks/mail.yml
+++ b/roles/mail/tasks/mail.yml
@@ -2,7 +2,7 @@
   homebrew: name={{ item }} state=present
   with_items:
     - isync
-    - mu
+    - dovecot
     #- lbdb # Talk to AddressBook
-    #- msmtp # Send mails
+    - msmtp # Send mails
     #- notmuch # Finding all the mails
