Use `aspell` instead of `ispell`
Ispell is outdated and GNU aspell is compatible.

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -40,7 +40,7 @@
     - tree   # I love this util for printing a tree of directories
     - graphviz # To draw class diagrams
     - httpie # Improved web service testing
-    - ispell # Spell checking in emacs
+    - aspell # TODO --with-lang-nl --with-lang-en
     - clang  # Needs more clang
     - llvm   # For emacs's company-mode
     - cmake  # For emacs's company-mode
