--- a/roles/ruby/tasks/main.yml
+++ b/roles/ruby/tasks/main.yml
@@ -1,4 +1,4 @@
 - include: ruby.yml tags=ruby
 
-- name: Install Phantomjs
-  homebrew: name=phantomjs state=present
+#- name: Install Phantomjs
+#  homebrew: name=phantomjs state=present
