--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,53 +1,3 @@
-- name: Check for homebrew
-  stat: path=/usr/local/Cellar
-  register: brew_installed
-
-- name: Install homebrew if needed
-  shell: >
-    ruby -e "$(curl -fsSL https://raw.github.com/Homebrew/homebrew/go/install)"
-  when: brew_installed.stat.exists == false
-
-- name: Update homebrew
-  homebrew: update_homebrew=yes
-
-- name: Common utilities
-  homebrew: name={{ item }} state=present
-  tags:
-    - utils
-  with_items:
-    - git
-    - ag     # [A code-searching tool similar to ack, but faster](http://geoff.greer.fm/ag/)
-#    - tmux   # [A better screen](http://tmux.sourceforge.net)
-#    - links  # [Browse in the terminal](http://links.twibright.com)
-#    - ngrok  # [Easy way to get a public IP](https://ngrok.com)
-    - htop   # [A better top](http://hisham.hm/htop/)
-    - heroku # Heroku Toolbelt
-#    - mosh   # [A better ssh (sometimes)](https://mosh.mit.edu)
-    - tig    # A 'text-mode interface' for git. Bit more visual than regular git.
-    - nvm    # Node.js version manager
-    - git-flow
-    - hub    # Command line interface for GitHub (wrapper for `git`)
-    - tree   # I love this util for printing a tree of directories
-    - graphviz # To draw class diagrams
-    - httpie # Improved web service testing
-    - aspell # TODO --with-lang-nl --with-lang-en
-#    - clang  # Needs more clang
-    - llvm   # For emacs's company-mode
-    - cmake  # For emacs's company-mode
-    - imagemagick # Convert all the things
-#    - trash  # Move to trash from the command line
-    - chruby # Ruby version manager
-
-- name: GNU global with ctags & pygments
-  shell: brew install global --with-ctags --with-pygments
-
-#- name: Install pure (simple and sleak prompt)
-#  npm: name=pure-prompt global=yes
-
-- name: Tap homebrew fonts
-  homebrew_tap: tap=caskroom/fonts state=present
-
-- name: Install fonts
-  homebrew_cask: name={{ item }} state=present
-  with_items:
-    - font-fira-code
+- include: homebrew.yml
+- include: utils.yml tags=utils
+- include: fonts.yml tags=fonts
