--- a/roles/osx/tasks/applications.yml
+++ b/roles/osx/tasks/applications.yml
@@ -6,37 +6,23 @@
   - chromium         # Chrome, but less evil (I hope)
   - cyberduck        # FTP
   - dash             # offline documentation
+  - docker           # Container all the things
+  - drop-to-gif      # Quickly convert video to gif
   - dropbox          # Files in the cloud
   - firefox          # The best browser out there
-#  - font-dejavu-sans # Fall-back fond
-  - font-fira-code   # My preferred font
-#  - font-fira-mono   # Fira, but without ligatures
-  - google-hangouts  # Audio & video chatting
   - handbrake        # Video conversion
-#  - harvest          # Time tracking
-# - iexplorer
-# - inkscape
-#  - iterm2           # Preferred Terminal
-#  - limechat         # IRC chatting
-#  - macdown          # Markdown editor WYSIWYG
+  - inkscape         # Vector drawing software
+  - keepingyouawake  # A Caffeine clone for macOS
+# - limechat         # IRC chatting
+# - macdown          # Markdown editor WYSIWYG
+# - ngrok            # [Easy way to get a public IP](https://ngrok.com)
   - mactex           # LaTeX on macOS
-# - mailmate
-# - ngrok
-# - p4merge
   - psequel          # PostgreSQL browser
-# - quickradar       # Post to openradar and apple at once (does not do 2FA)
-# - reveal           # For iOS UI debuggin
-# - rubymotion
-# - screenhero
-# - sketch
   - skype            # More audio/video chatting
   - slack            # Chat
   - spectacle        # Resizing windows the easy way
   - spotify          # Music
   - sqlitebrowser    # SQLite browser
-#  - teamviewer       # To provide remove support to relatives
-#  - teensy           # Firmware updater for Ergodox
-#  - the-unarchiver   # File decrompressor
-  - utorrent         # To borrow things from the internet
-# - viber
+# - teensy           # Firmware updater for Ergodox
+  - transmission     # Torrent client
   - whatsapp         # Meh
